@@ -7,6 +7,7 @@
 * Update - Test mode notice width is now consistent across all pages.
 * Add - New notification to urge setting SSL for checkout pages if store doesn't use HTTPS
 * Fix - Fixed connection timeout configuration.
+* Fix - Specify error code when refund fails in admin to prevent blank alert.
 
 = 1.8.0 - 2020-12-16 =
 * Add - Include information about failing payment into order notes.
